<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".checklist_all_fragment">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.16" />



    <!-- header -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/checklist_header_bg_gradation"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/checklist_title"
            android:textSize="30sp"
            android:background="?attr/invisible"
            android:textColor="?attr/headerTextColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- body -->
    <!-- 체크리스트 정렬 옵션 선택 버튼 -->
    <TextView
        android:id="@+id/checklist_attribute_choose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:background="@drawable/checklist_attribute_select_btn"
        android:paddingStart="15sp"
        android:paddingTop="5sp"
        android:paddingEnd="15sp"
        android:paddingBottom="5sp"
        android:text="@string/checklist_select_attr_btn_txt_default"
        android:textSize="?attr/btnTextSize"
        android:elevation="2sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline1"
        app:layout_constraintVertical_bias="0.5" />

    <!-- 체크리스트 항목 표시 -->
    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:weightSum="5"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintTop_toTopOf="@+id/guideline">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="10sp"
            android:layout_marginTop="7sp"
            android:layout_marginEnd="10sp"
            android:layout_marginBottom="7sp"
            android:background="@drawable/checklist_attribute_title_border"
            android:gravity="center"
            android:text="@string/checklist_attr_type"
            android:textSize="?attr/categoryTextSize"
            />
        
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10sp"
            android:layout_marginTop="7sp"
            android:layout_marginEnd="10sp"
            android:layout_marginBottom="7sp"
            android:layout_weight="2"
            android:background="@drawable/checklist_attribute_title_border"
            android:gravity="center"
            android:text="@string/checklist_attr_title"
            android:textSize="?attr/categoryTextSize" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10sp"
            android:layout_marginTop="7sp"
            android:layout_marginEnd="10sp"
            android:layout_marginBottom="7sp"
            android:layout_weight="1"
            android:background="@drawable/checklist_attribute_title_border"
            android:gravity="center"
            android:text="@string/checklist_attr_attr"
            android:textSize="?attr/categoryTextSize" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10sp"
            android:layout_marginTop="7sp"
            android:layout_marginEnd="10sp"
            android:layout_marginBottom="7sp"
            android:layout_weight="1"
            android:background="@drawable/checklist_attribute_title_border"
            android:gravity="center"
            android:text="@string/checklist_attr_check_details"
            android:textSize="?attr/categoryTextSize" />

    </LinearLayout>

    <!-- 체크리스트 내용 표시 -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/checklist_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingBottom="5sp"
        android:paddingTop="5sp"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        android:layout_margin="3sp"
        android:background="@drawable/checklist_attr_background_border"
        tools:listitem="@layout/checklist_shower"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline7"
        />

    <!-- footer -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2">

        <ImageView
            android:id="@+id/checklist_back_calendar_btn"
            android:layout_width="?attr/btnIconSize"
            android:layout_height="?attr/btnIconSize"
            android:src="@drawable/calendar"
            android:background="@drawable/under_icon_border"
            app:tint="?attr/iconColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/checklist_add_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/checklist_add_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/checklist_btn_border"
            android:paddingStart="20sp"
            android:paddingTop="5sp"
            android:paddingEnd="20sp"
            android:paddingBottom="5sp"
            android:text="@string/checklist_add_txt"
            android:textSize="?attr/btnTextSize"
            android:textColor="?attr/iconColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.22" />


</androidx.constraintlayout.widget.ConstraintLayout>